--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <meta name="description" content="Mentoria Individual 2026 · Kickoff na sua carreira internacional com Bruno Tozzini, Creative Director em Amsterdam."/>
+        <meta name="description" content="Mentoria Individual 2026 · Bruno Tozzini, Creative Director em Amsterdam."/>
         <title>Mentoria 2026 · Bruno Tozzini</title>
         <!-- Roboto -->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet"/>
@@ -43,13 +43,13 @@
                         </div>
                         <div>
                             <h1 class="text-4xl md:text-6xl font-extrabold leading-[1.08] tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-indigo-700 via-fuchsia-600 to-pink-600 drop-shadow-sm">
-                Kickoff na sua carreira internacional </h1>
+                Preparando você para o mercado internacional </h1>
                         </div>
                     </div><span class="block text-gray-500 font-medium italic text-lg mt-3 leading-snug">
-            4 semanas. 100% direto. Zero bullshit. </span>
+            100% direto. Zero bullshit. </span>
                     <!-- HERO PARAGRAPH -->
-                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais &#8212; São Francisco, Nova York, Berlim, Amsterdã, São Paulo, Edelman, TBWA, Leo Burnett, R/GA e DDB.</span> <span class="block">
-              Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. </span> </p>
+                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett, R/GA, entre outras. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internancional.
+ </span> </p>
                     <div class="mt-8 flex flex-col items-start gap-4 sm:flex-row sm:items-center flex-wrap"><a href="https://calendly.com/brunotozzini/30min" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md" target="_blank">
               Aplicar agora </a><a href="http://tozzini.work" target="_blank" rel="noopener noreferrer" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md">
               Conheça meu histórico profissional </a>
