--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett, R/GA, entre outras. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internancional.
  </span> </p>
                     <div class="mt-8 flex flex-col items-start gap-4 sm:flex-row sm:items-center flex-wrap"><a href="https://calendly.com/brunotozzini/30min" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md" target="_blank">
-              Aplicar agora </a><a href="http://tozzini.work" target="_blank" rel="noopener noreferrer" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md">
+              Agendar primeira sessão </a><a href="http://tozzini.work" target="_blank" rel="noopener noreferrer" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md">
               Conheça meu histórico profissional </a>
                         <div class="font-normal leading-snug py-0 text-[11px] text-gray-500 md:text-xs">
-                            4 sessões · 1h cada · formato 1:1 remoto
+                            4 sessões · 1 hora cada · formato 1:1 remoto
 </div>
                     </div>
                 </div>
@@ -83,12 +83,12 @@
                     <div class="flex items-start gap-3">
                         <div class="blob-icon flex items-center justify-center rounded-xl text-white font-semibold ring-2 ring-white/30 bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-400 h-10 w-10 text-lg leading-none"><span class="leading-none select-none">🧠</span>
                         </div>
-                        <p class="text-[15px] leading-[1.55] text-gray-700"> <span class="font-semibold text-fuchsia-700">Portfólio e CV:</span> alinhados pra entrevistas reais, não teoria de palco. </p>
+                        <p class="text-[15px] leading-[1.55] text-gray-700"> <span class="font-semibold text-fuchsia-700">Portfólio, CV e CL:</span> alinhados para vida real, não teoria de palco. </p>
                     </div>
                     <div class="flex items-start gap-3">
                         <div class="blob-icon flex items-center justify-center rounded-xl text-white font-semibold ring-2 ring-white/30 bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-400 h-10 w-10 text-lg leading-none"><span class="leading-none select-none">🤝</span>
                         </div>
-                        <p class="text-[15px] leading-[1.55] text-gray-700"> <span class="font-semibold text-blue-700">Networking e proposta:</span> como se preparar e negociar de forma segura. </p>
+                        <p class="text-[15px] leading-[1.55] text-gray-700"> <span class="font-semibold text-blue-700">Networking:</span> Nomes, contatos e como se preparar de forma efetiva. </p>
                     </div>
                 </div>
             </div>
@@ -96,10 +96,7 @@
         <!-- PROGRAMA -->
         <section class="px-6 py-14 md:px-10 md:py-16">
             <div class="w-full max-w-6xl mx-auto">
-                <p class="font-light inline-grid leading-relaxed max-w-fit mb-8 min-w-fit mx-auto size-fit text-[15px] text-gray-700 text-left w-auto lg:mx-0 md:text-[16px]">São 4 horas ao longo de 4 semanas, com foco em gerar resultados concretos: estruturar seu plano de carreira,
-            ser selecionado para entrevistas, se sair bem nelas e, eventualmente, receber propostas de trabalho.
-            A mentoria não é uma aula nem uma fórmula mágica para o sucesso, mas sim uma troca de experiências.
-            Sua participação ativa é essencial &#8212; compartilhando dúvidas, expectativas e desafios, além de se dedicar totalmente ao processo.</p>
+                <p class="font-light inline-grid leading-relaxed max-w-fit mb-8 min-w-fit mx-auto size-fit text-[15px] text-gray-700 text-left w-auto lg:mx-0 md:text-[16px]">São 4 horas em até 4 semanas, com foco em gerar resultados concretos em curto prazo: estruturar seu plano de carreira, aplicar para vagas, conseguir entrevistas e eventualmente receber uma proposta de trabalho. A mentoria não é uma aula nem uma fórmula mágica para o sucesso, mas sim uma troca de experiências de vida e profissional. Sua participação ativa é essencial, compartilhando dúvidas, expectativas, além de se dedicar totalmente ao processo. </p>
                 <div class="max-w-3xl mx-auto lg:mx-0">
                     <div class="flex items-start gap-3 mb-4">
                         <div class="blob-icon flex items-center justify-center rounded-xl text-white font-semibold ring-2 ring-white/30 bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-400 h-10 w-10 text-lg leading-none"><span class="leading-none select-none">📘</span>
@@ -124,9 +121,8 @@
                         </button>
                         <div id="semana1" class="accordion-content border-t border-gray-100 px-5 pb-5 pt-4 text-[14px] leading-[1.55] text-gray-700" aria-hidden="true">
                             <p class="mb-3"> <span class="font-semibold text-gray-900">Foco:</span>
-                Conversa sobre seu momento profissional, objetivos, cargos, overview do mercado internacional e holandês,
-                vistos e contratos. Review do LinkedIn e introdução ao método ‘First 90 Days’. </p>
-                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">Extra:</span>
+                Conversa sobre seu momento profissional, objetivo, cargos, overview do mercado internacional, visto e contratos. Review do LinkedIn e introdução ao método ‘First 90 Days’. </p>
+                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">E mais:</span>
                 Língua, diferenças culturais, pros & cons, salários e expectativas. </p>
                         </div>
                     </div>
@@ -146,8 +142,8 @@
                             <p class="mb-3"> <span class="font-semibold text-gray-900">Foco:</span>
                 Revisão completa do portfólio, ajustes de flow e formato. Revisão de currículo e carta de apresentação,
                 com sugestões práticas. </p>
-                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">Extra:</span>
-                Review do plano ‘90 Days’. </p>
+                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">E mais:</span>
+                Review do plano ‘First 90 Days’. </p>
                         </div>
                     </div>
                     <!-- Semana 3 -->
@@ -164,10 +160,10 @@
                         </button>
                         <div id="semana3" class="accordion-content border-t border-gray-100 px-5 pb-5 pt-4 text-[14px] leading-[1.55] text-gray-700" aria-hidden="true">
                             <p class="mb-3"> <span class="font-semibold text-gray-900">Foco:</span>
-                Finalização de portfolio e CV. Discussão sobre vagas, networking e entrevistas. Melhores práticas e
-                preparação. </p>
-                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">Extra:</span>
-                Demonstração de plataforma Kanban para organizar a jornada e review do diário ‘90 Days’. </p>
+                Finalização de portfolio e CV. Discussão sobre vagas, contatos, networking e entrevistas. Melhores práticas e
+                preparação.</p>
+                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">E mais:</span>
+                Introdução a plataforma Kanban (ZENKIT) para organizar sua jornada. Review do seu plano ‘First 90 Days’. </p>
                         </div>
                     </div>
                     <!-- Semana 4 -->
@@ -184,10 +180,9 @@
                         </button>
                         <div id="semana4" class="accordion-content border-t border-gray-100 px-5 pb-5 pt-4 text-[14px] leading-[1.55] text-gray-700" aria-hidden="true">
                             <p class="mb-3"> <span class="font-semibold text-gray-900">Foco:</span>
-                Resultados alcançados: entrevistas, propostas, negociação de contrato e speech de entrevista. Review
-                final do ‘90 Days’. </p>
-                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">Extra:</span>
-                Deep-dive em tópicos dos primeiros encontros. </p>
+                Avaliação dos resultados alcançados e review final do ‘First 90 Days’.</p>
+                            <p class="text-gray-600"> <span class="font-semibold text-gray-900">E mais:</span>
+                Deep-dive em algum ponto que ficou aberto nos primeiros encontros. </p>
                         </div>
                     </div>
                 </div>
@@ -206,20 +201,20 @@
                 </div>
                 <div class="mt-10 grid gap-5 sm:grid-cols-2 lg:grid-cols-3 text-[14px] leading-[1.55]">
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
-                        <h3 class="text-base font-bold text-indigo-700 leading-snug">R$ 400,00 / hora</h3>
+                        <h3 class="text-base font-bold text-indigo-700 leading-snug">R$ 390,00 / hora</h3>
                         <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Pagamento no dia de cada sessão, via Pix.</p>
                     </div>
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
-                        <h3 class="text-base font-bold text-fuchsia-700 leading-snug">4 encontros · até 2 meses</h3>
-                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Sessões flexíveis, concluídas em até dois meses.</p>
+                        <h3 class="text-base font-bold text-fuchsia-700 leading-snug">4 encontros em até 4 semanas</h3>
+                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Sessões flexíveis, concluídas em até 4 semanas. Suporte via WhatsApp durante todas as etapas.</p>
                     </div>
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
                         <h3 class="text-base font-bold text-blue-700 leading-snug">100% sigilo mútuo</h3>
-                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Tudo que for compartilhado permanece confidencial.</p>
+                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Tudo que for compartilhado permanece confidencial, do início ao fim. </p>
                     </div>
                 </div>
                 <p class="mt-5 text-[11px] leading-snug text-gray-500 md:text-xs font-light max-w-xl">
-          Ambas as partes podem interromper a mentoria a qualquer momento, sem necessidade de aviso prévio. </p>
+          Ambas as partes podem interromper a mentoria a qualquer momento, caso necessário. </p>
             </div>
         </section>
         <!-- AVALIAÇÃO DOS MENTORADOS -->
@@ -313,9 +308,9 @@
                         <h2 class="text-3xl md:text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-indigo-600 via-fuchsia-600 to-pink-600 leading-[1.15] drop-shadow-sm">
               Bruno Tozzini </h2>
                     </div>
-                    <p class="text-[15px] leading-[1.5] text-gray-700 font-medium mb-1">Creative Director | Amsterdam</p>
-                    <p class="text-[13px] leading-[1.4] text-gray-500 font-normal mb-6">TEDx Speaker | +30 prêmios internacionais</p>
-                    <p class="font-light leading-[1.6] leading-relaxed max-w-xl text-[15px] text-gray-700">Nascido em São Paulo, morou na Itália e hoje chama Amsterdã de casa. Como Diretor Criativo internacional, vem construindo marcas através de conteúdo social-first e pensamento de earned media &#8212; trabalhando para redes e agências globais como Edelman, TBWA, Leo Burnett, R/GA e DDB.</p>
+                    <p class="text-[15px] leading-[1.5] text-gray-700 font-medium mb-1">Creative Director | Google-Certified GenAI leader</p>
+                    <p class="text-[13px] leading-[1.4] text-gray-500 font-normal mb-6">+30 prêmios internacionais</p>
+                    <p class="font-light leading-[1.6] leading-relaxed max-w-xl text-[15px] text-gray-700">Nascido em São Paulo, Brasil, morou na Itália e vive em Amsterdã desde 2015. Como Creative Director, seu interesse está em construir marcas por meio de plataformas digitais. Tem o privilégio de trabalhar com algumas das marcas mais icônicas do mundo, incluindo McDonald’s, Samsung, Philips e Danone. </p>
                 </div>
                 <!-- CONQUISTAS -->
                 <div>
@@ -331,19 +326,13 @@
                         <li class="flex items-start gap-3"><span class="text-amber-400 text-lg leading-none drop-shadow">🏅</span>
                             <div>
                                 <div class="font-bold text-gray-900">Vencedor do Webby Awards</div>
-                                <div class="text-gray-600 font-normal">Reconhecimento internacional em experiências digitais e conteúdo.</div>
+                                <div class="text-gray-600 font-normal">Reconhecimento internacional e jurado da premiação.</div>
                             </div>
                         </li>
                         <li class="flex items-start gap-3"><span class="text-amber-400 text-lg leading-none drop-shadow">🏅</span>
                             <div>
-                                <div class="font-bold text-gray-900">TEDx Speaker</div>
-                                <div class="text-gray-600 font-normal">Palestrante sobre IoT - internet das coisas e wearables.</div>
-                            </div>
-                        </li>
-                        <li class="flex items-start gap-3"><span class="text-amber-400 text-lg leading-none drop-shadow">🏅</span>
-                            <div>
-                                <div class="font-bold text-gray-900">Projetos globais</div>
-                                <div class="text-gray-600 font-normal">Experiência com marcas como McDonald's, Samsung, Microsoft, Unilever e Philips.</div>
+                                <div class="font-bold text-gray-900">TEDx Speaker & DMWF</div>
+                                <div class="text-gray-600 font-normal">Painelista no Digital Marketing World Forum 2025 em Amsterdam. </div>
                             </div>
                         </li>
                     </ul>
