--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div><span class="block text-gray-500 font-medium italic text-lg mt-3 leading-snug">
             100% direto. Zero bullshit. </span>
                     <!-- HERO PARAGRAPH -->
-                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett, R/GA, entre outras. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internancional.
+                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett, R/GA, entre outras. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internacional.
  </span> </p>
                     <div class="mt-8 flex flex-col items-start gap-4 sm:flex-row sm:items-center flex-wrap"><a href="https://calendly.com/brunotozzini/30min" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md" target="_blank">
               Agendar primeira sessão </a><a href="http://tozzini.work" target="_blank" rel="noopener noreferrer" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md">
@@ -163,7 +163,7 @@
                 Finalização de portfolio e CV. Discussão sobre vagas, contatos, networking e entrevistas. Melhores práticas e
                 preparação.</p>
                             <p class="text-gray-600"> <span class="font-semibold text-gray-900">E mais:</span>
-                Introdução a plataforma Kanban (ZENKIT) para organizar sua jornada. Review do seu plano ‘First 90 Days’. </p>
+                Introdução a plataforma Kanban para organizar sua jornada. Review do seu plano ‘First 90 Days’. </p>
                         </div>
                     </div>
                     <!-- Semana 4 -->
