--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div><span class="block text-gray-500 font-medium italic text-lg mt-3 leading-snug">
             100% direto. Zero bullshit. </span>
                     <!-- HERO PARAGRAPH -->
-                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett, R/GA, entre outras. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internacional.
+                    <p class="mt-6 text-[15px] md:text-[16px] leading-[1.7] text-gray-700 font-light text-left lg:text-justify max-w-3xl lg:max-w-5xl xl:max-w-6xl"> <span class="block">Vinte anos de experiência em mercados e networks globais: Edelman, TBWA, Oliver, Leo Burnett e R/GA. Conversas reais, estratégias práticas e orientação personalizada pra você dar o próximo passo com confiança. Uma jornada guiada rumo a sua carreira internacional.
  </span> </p>
                     <div class="mt-8 flex flex-col items-start gap-4 sm:flex-row sm:items-center flex-wrap"><a href="https://calendly.com/brunotozzini/30min" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md" target="_blank">
               Agendar primeira sessão </a><a href="http://tozzini.work" target="_blank" rel="noopener noreferrer" class="rounded-full bg-gradient-to-r from-indigo-600 to-fuchsia-600 text-white px-7 py-3 text-sm font-semibold tracking-wide hover:opacity-90 transition-transform transform hover:-translate-y-0.5 shadow-md">
@@ -201,12 +201,12 @@
                 </div>
                 <div class="mt-10 grid gap-5 sm:grid-cols-2 lg:grid-cols-3 text-[14px] leading-[1.55]">
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
-                        <h3 class="text-base font-bold text-indigo-700 leading-snug">R$ 390,00 / hora</h3>
-                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Pagamento no dia de cada sessão, via Pix.</p>
+                        <h3 class="text-base font-bold text-indigo-700 leading-snug">R$ 390,00 a sessão</h3>
+                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Pagamento somente no dia, via Pix.</p>
                     </div>
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
                         <h3 class="text-base font-bold text-fuchsia-700 leading-snug">4 encontros em até 4 semanas</h3>
-                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Sessões flexíveis, concluídas em até 4 semanas. Suporte via WhatsApp durante todas as etapas.</p>
+                        <p class="text-gray-700 font-normal mt-2 leading-[1.55]">Sessões flexíveis, concluídas em até um mês. Suporte via WhatsApp durante todas as etapas.</p>
                     </div>
                     <div class="bg-white border border-gray-200 rounded-2xl shadow-sm transition-all duration-200 p-5 hover:shadow-xl hover:bg-gradient-to-br hover:from-indigo-50 hover:via-fuchsia-50 hover:to-pink-50 hover:border-fuchsia-200">
                         <h3 class="text-base font-bold text-blue-700 leading-snug">100% sigilo mútuo</h3>
@@ -214,7 +214,7 @@
                     </div>
                 </div>
                 <p class="mt-5 text-[11px] leading-snug text-gray-500 md:text-xs font-light max-w-xl">
-          Ambas as partes podem interromper a mentoria a qualquer momento, caso necessário. </p>
+          Ambas as partes podem interromper a mentoria a qualquer momento, caso considerarem necessário. </p>
             </div>
         </section>
         <!-- AVALIAÇÃO DOS MENTORADOS -->
